[package]
authors       = ["Brenden Matthews <brenden@brndn.io>"]
categories    = []
description   = "Supervision trees for Tokio-based services inspired by Erlang/OTP"
documentation = "https://docs.rs/supertrees"
edition       = "2021"
keywords      = []
license       = "LGPL-3.0-only"
name          = "supertrees"
readme        = "README.md"
repository    = "https://github.com/brndnmtthws/supertrees"
rust-version  = "1.75"
version       = "0.1.0"

[dependencies]
libc = "0.2"
log = "0.4"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
] }

[dev-dependencies]
test-log = "0.2"
